Fixed layout issues on other blog pages from divider changes, mobile changes

--- a/_sass/_queries.scss
+++ b/_sass/_queries.scss
@@ -5,13 +5,6 @@
   }
 
 
-  .blog {
-    background-color: var(--content-background-color);
-  }
-
-  .blog__post {
-    background-color: transparent;
-  }
   #navToggleButton {
     display: block;
   }
@@ -79,6 +72,31 @@
     display: block;
   }
 
+}
+
+@media screen and (max-width: 870px) {
+  .sidebar__content {
+    padding-right: 1em;
+    font-size: 0.9em;
+    grid-column: 2 / 3;
+  }
+
+  .sidebar__blurb {
+    padding-right: 0em;
+  }
+
+  .sidebar__title {
+    font-size: 1em;
+    font-weight: bold;
+  }
+
+  .sidebar__latest-posts, .sidebar__blog-links {
+    font-size: 0.9em;
+  }
+
+  .blog h1 {
+    padding-left: 0.8em;
+  }
 }
 
 @media screen and (max-width: 1280px) {
